feat: add ATLAS Guardian core with JPL Horizons orbit analysis
- Integrate JPL Horizons API for 3I/ATLAS (C/2025 N1)
- Parse orbital elements (e, q, i, Ω, ω, a, M, epoch)
- Classify orbit as hyperbolic interstellar and retrograde
- Compute days to perihelion using astropy time
- Add AtlasAgent wrapper and test scripts

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 streamlit
 requests
+openai
+
 # Optional: astroquery for JPL Horizons
 # astroquery
 # vector DB clients (uncomment as you integrate):
 # pinecone-client
 # supabase
-# numpy
+numpy
+matplotlib
